--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
     line-height: 1.3;
     padding: 0px;
     margin-top: 0px;
-/*    overflow: hidden;*/
+    /*    overflow: hidden;*/
 }
 
 a.social {
@@ -38,7 +38,7 @@ a {
 .column-1 {
     float: left;
     width: 20%;
-/*    height: 100%;*/
+    /*    height: 100%;*/
     padding: 10px;
     height: 750px;
     overflow: hidden;
@@ -47,7 +47,7 @@ a {
 .column-2 {
     float: left;
     width: 60%;
-/*    height: 100%;*/
+    /*    height: 100%;*/
     padding-top: 0px;
     padding-left: 20px;
     padding-right: 20px;
@@ -148,6 +148,54 @@ img.releases:hover {
 
 /* width */
 ::-webkit-scrollbar {
-width: 0px;
+    width: 0px;
 }
 
+
+    .mobile-footer {
+        display: none;
+    }
+
+
+
+/*mobile*/
+
+@media only screen and (max-width: 768px) {
+
+    [class*="column-"] {
+        width: 100%;
+    }
+
+    
+    .column-1 {
+        display:none;
+    }
+    
+    .column-3 {
+        display: none;
+    }
+    
+    .column-2 {
+        padding: 10px;
+        height: auto;
+        text-align: center;
+    }
+    
+    .sub-column-1 {
+        padding: 0px;
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    
+.sub-column-2 {
+        padding: 0px;
+        padding-bottom: 20px;
+    text-align: left;
+    }
+    
+    .mobile-footer {
+        display: block;
+        text-align: center;
+        padding-bottom: 20px;
+    }
+}
