--- a/main.css
+++ b/main.css
@@ -198,4 +198,8 @@ img.releases:hover {
         text-align: center;
         padding-bottom: 20px;
     }
+    
+    img.main {
+        width: 100%;
+    }
 }
